--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>Text analyzer</title>
     <meta charset="utf-8">
-
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+    <script src="app.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
@@ -15,30 +16,30 @@
             <form>
                 <div>
                     <label for="user-text">Text to analyze</label>
-                    <textarea cols="60" rows="20" id="user-text" name="user-text" placeholder="Enter your text here!" required></textarea>
+                    <textarea class="js-textarea" cols="60" rows="20" id="user-text" name="user-text" placeholder="Enter your text here!" required></textarea>
                 </div>
                 <div>
                     <button type="submit">Analyze it!</button>
                 </div>
             </form>
 
-            <dl class="hidden text-report">
+            <dl id="textresults" class="hidden text-report">
                 <dt>Word count</dt>
-                <dd></dd>
+                <dd id="js-wordcount"></dd>
 
                 <dt>Unique word count</dt>
-                <dd></dd>
+                <dd id="js-uniquecount"></dd>
 
                 <dt>Average word length</dt>
-                <dd></dd>
+                <dd id="js-avgwordlength"></dd>
 
                 <dt>Average sentence length</dt>
-                <dd></dd>
+                <dd id="js-avgsentencelength"></dd>
             </dl>
         </main>
     </div>
 
-<script type="app.js"></script>
-<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+
+
 </body>
 </html>
